# DictGenerator

./: CMakeLists.txt  Chars.h  Decoder.cpp  Decoder.h  Dict.h  GenDictMauro.cpp  GenDictMauro.h  GenDictMerriam.cpp  GenDictMerriam.h  HtmlReader.cpp  HtmlReader.h  HtmlTree.cpp  HtmlTree.h  Tools.cpp  Tools.h  main.cpp
